--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 .vscode
+
+Assets/Scripts/*.meta
