--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@ Assets/Scripts/Primitives/FlatBezierRenderer.cs.meta
 Assets/Scripts/Primitives/Bezier.cs.meta
 Assets/Scripts/Car/Route.cs.meta
 Assets/Scripts/Buttons/SaveStructs.cs.meta
+Assets/Scripts/Buttons/LoadButton.cs.meta
