--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,4 @@ Assets/Scripts/Primitives/Bezier.cs.meta
 Assets/Scripts/Car/Route.cs.meta
 Assets/Scripts/Buttons/SaveStructs.cs.meta
 Assets/Scripts/Buttons/LoadButton.cs.meta
+Assets/Scripts/Car/Roads.cs.meta
