save travel times to a json file

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,4 @@ Assets/Scripts/Car/Route.cs.meta
 Assets/Scripts/Buttons/SaveStructs.cs.meta
 Assets/Scripts/Buttons/LoadButton.cs.meta
 Assets/Scripts/Car/Roads.cs.meta
+Assets/Scripts/Buttons/SaveTravelTimes.cs.meta
