add photo mode to take pictures

--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,4 @@ Assets/Scripts/Buttons/SaveStructs.cs.meta
 Assets/Scripts/Buttons/LoadButton.cs.meta
 Assets/Scripts/Car/Roads.cs.meta
 Assets/Scripts/Buttons/SaveTravelTimes.cs.meta
+Assets/Scripts/Buttons/PhotoMode.cs.meta
